crates/datarig-tui/tests/snapshots/flows_plan__plan_menu_en_120x34.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(120, 34).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ×                                                                            "
"│  ＋ New connection         │╭ Query · console 1 ─────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾╭───────────────────────────────────────────────────────╮.1:55432 · policy: default      Space c s switch connection │"
"│ │ › type to filter                                      │                                                            │"
"│ │ HashAggregate                                         │                                                            │"
"│ │  Plan: show or hide the selected node's detail  Enter │                                                            │"
"│ │  Plan: copy as text (as psql shows it)              y │                                                            │"
"│ │  Plan: copy its JSON                                Y │                                                            │"
"│ │ Plan                                                  │                                                            │"
"│ │  Plan view: tree                                    1 │                                                            │"
"│ │  Plan view: raw text (as psql shows it)             9 │                                                            │"
"│ │  Result tabs → next                                 L │                                                            │"
"│ │  Result tabs → previous                             H │                                                            │"
"│ │  Results pane → maximise / restore                  z │────────────────────────────────────────────────────────────╯"
"│ ╰───────────────────────────────────────────────────────╯────────────────────────────────────────────────────────────╮"
"│                            ││  Result 1  [Plan]  Messages                                                            │"
"│                            ││ [Tree]  Raw                                      execution 86.6 ms · planning 0.785 ms │"
"│                            ││ Node                         est rows  rows ×loops       self      total share         │"
"│                            ││ ▾ Sort                              4            4   0.033 ms    86.5 ms ▏          <1%│"
"│                            ││ └─▾ HashAggregate hot               4            4    41.2 ms    86.5 ms ████▎      47%│"
"│                            ││   └─▾ Hash Join hot            116.6k       116.7k    24.7 ms    45.3 ms ██▋        28%│"
"│                            ││     ├── Seq Scan on zz_… hot   116.6k       116.7k    20.4 ms    20.4 ms ██▏        23%│"
"│                            ││     └─▾ Hash                     1000         1000   0.124 ms   0.210 ms ▏          <1%│"
"│                            ││       └── Seq Scan on zz_cu…     1000         1000   0.086 ms   0.086 ms ▏          <1%│"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms                                                                    EN "
