crates/datarig-tui/tests/snapshots/flows_plan__plan_raw_en_160x45.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(160, 45).backend()"
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1▎SELECT * FROM t;                                                                                                  │"
"│    ▸ analytics                       ││                                                                                                                      │"
"│    ▸ public                          ││                                                                                                                      │"
"│    ▸ shop                            ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Plan · Raw ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                      ││  Result 1  [Plan]  Messages                                                                                          │"
"│                                      ││ …  Summary   Icicle   Flame   Timeline   Row flow   Treemap   Boxes  [Raw]     execution 82.4 ms · planning 0.824 ms │"
"│                                      ││ Seq Scan on zz_customers c  (cost=0.32..134930.89 rows=250 width=37) (actual time=2.000..80.545 rows=250.00 loops=1) │"
"│                                      ││   Filter: (region = 'north'::text)                                                                                   │"
"│                                      ││   Rows Removed by Filter: 750                                                                                        │"
"│                                      ││   Buffers: shared hit=50352 read=157                                                                                 │"
"│                                      ││   InitPlan 3                                                                                                         │"
"│                                      ││     ->  Result  (cost=0.31..0.32 rows=1 width=4) (actual time=0.040..0.042 rows=1.00 loops=1)                        │"
"│                                      ││           Buffers: shared hit=3                                                                                      │"
"│                                      ││           InitPlan 2                                                                                                 │"
"│                                      ││             ->  Limit  (cost=0.28..0.31 rows=1 width=4) (actual time=0.039..0.040 rows=1.00 loops=1)                 │"
"│                                      ││                   Buffers: shared hit=3                                                                              │"
"│                                      ││                   ->  Index Only Scan using zz_customers_pkey on zz_customers  (cost=0.28..35.27 rows=1000 width=4) …│"
"│                                      ││                         Index Searches: 1                                                                            │"
"│                                      ││                         Heap Fetches: 0                                                                              │"
"│                                      ││                         Buffers: shared hit=3                                                                        │"
"│                                      ││   SubPlan 1                                                                                                          │"
"│                                      ││     ->  Aggregate  (cost=539.64..539.65 rows=1 width=32) (actual time=0.319..0.319 rows=1.00 loops=250)              │"
"│                                      ││           Buffers: shared hit=50343 read=157                                                                         │"
"│                                      ││           ->  Bitmap Heap Scan on zz_orders o  (cost=5.84..539.14 rows=200 width=5) (actual time=0.063..0.285 rows=2…│"
"│                                      ││                 Recheck Cond: (customer = c.id)                                                                      │"
"│                                      ││                 Heap Blocks: exact=50000                                                                             │"
"│                                      ││                 Buffers: shared hit=50343 read=157                                                                   │"
"│                                      ││                 ->  Bitmap Index Scan on zz_orders_customer  (cost=0.00..5.79 rows=200 width=0) (actual time=0.028..…│"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms                  │ Enter detail · v views · h fold · y copy · Esc back · : commands · F1 help · Space more EN "
