crates/datarig-tui/tests/snapshots/flows_plan__plan_raw_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1▎SELECT * FROM t;  ✓ plan · 3ms · 14:03            │"
"│    ▸ analytics       ││                                                      │"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Raw ──────────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                          │"
"│                      ││ … [Raw]        execution 82.4 ms · planning 0.824 ms │"
"│                      ││ Seq Scan on zz_customers c  (cost=0.32..134930.89 ro…│"
"│                      ││   Filter: (region = 'north'::text)                   │"
"│                      ││   Rows Removed by Filter: 750                        │"
"│                      ││   Buffers: shared hit=50352 read=157                 │"
"│                      ││   InitPlan 3                                         │"
"│                      ││     ->  Result  (cost=0.31..0.32 rows=1 width=4) (ac…│"
"│                      ││           Buffers: shared hit=3                      │"
"│                      ││           InitPlan 2                                 │"
"│                      ││             ->  Limit  (cost=0.28..0.31 rows=1 width…│"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms   │ Enter detail · v views EN "
