crates/datarig-tui/tests/snapshots/flows_plan__plan_rows_en_160x45.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(160, 45).backend()"
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1▎SELECT * FROM t;  ✓ plan · 3ms · 14:03                                                                            │"
"│    ▸ analytics                       ││                                                                                                                      │"
"│    ▸ public                          ││                                                                                                                      │"
"│    ▸ shop                            ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Plan · Row flow ─────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                      ││  Result 1  [Plan]  Messages                                                                                          │"
"│                                      ││ …  Summary   Icicle   Flame   Timeline  [Row flow]  Treemap   Boxes   Raw      execution 82.4 ms · planning 0.824 ms │"
"│                                      ││ Rows each node passed up, every loop (log scale), and what its filters removed                                       │"
"│                                      ││ Seq Scan on zz_customers c                               ████████████████████               250 −750 filtered        │"
"│                                      ││   InitPlan 3: Result                                              ██                          1                      │"
"│                                      ││     InitPlan 2: Limit                                             ██                          1                      │"
"│                                      ││       Index Only Scan using zz_customers_pkey …                   ██                          1                      │"
"│                                      ││   SubPlan 1: Aggregate                                   ████████████████████               250                      │"
"│                                      ││     Bitmap Heap Scan on zz_orders o             ███████████████████████████████████████   50.0k hot                  │"
"│                                      ││       Bitmap Index Scan on zz_orders_customer   ███████████████████████████████████████   50.0k                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms                  │ Enter detail · v views · h fold · y copy · Esc back · : commands · F1 help · Space more EN "
