crates/datarig-tui/tests/snapshots/flows_plan__plan_rows_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1▎SELECT * FROM t;  ✓ plan · 3ms · 14:03            │"
"│    ▸ analytics       ││                                                      │"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Row flow ─────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                      H/L │"
"│                      ││ … [Row flow] … execution 82.4 ms · planning 0.824 ms │"
"│                      ││ Rows each node passed up, every loop (log scale), a… │"
"│                      ││ Seq Scan on zz_custo…   ████       250 −750 filtered │"
"│                      ││   InitPlan 3: Result     █           1               │"
"│                      ││     InitPlan 2: Limit    █           1               │"
"│                      ││       Index Only Sca…    █           1               │"
"│                      ││   SubPlan 1: Aggrega…   ████       250               │"
"│                      ││     Bitmap Heap Scan… ████████   50.0k hot           │"
"│                      ││       Bitmap Index S… ████████   50.0k               │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms   │ Enter detail · v views EN "
