crates/datarig-tui/tests/snapshots/flows_plan__plan_summary_en_160x45.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(160, 45).backend()"
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1▎SELECT * FROM t;  ✓ plan · 3ms · 14:03                                                                            │"
"│    ▸ analytics                       ││                                                                                                                      │"
"│    ▸ public                          ││                                                                                                                      │"
"│    ▸ shop                            ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Plan · Summary ──────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                      ││  Result 1  [Plan]  Messages                                                                                      H/L │"
"│                                      ││  Tree  [Summary]  Icicle   Flame   Timeline   Row flow   Treemap   Boxes  …    execution 86.6 ms · planning 0.785 ms │"
"│                                      ││╭ Slowest node ──────────────────────────────────────────╮ ╭ Worst row estimate ────────────────────────────────────╮ │"
"│                                      │││ HashAggregate                                          │ │ none: every estimate within ×10                        │ │"
"│                                      │││ 47% of the whole · 41.2 ms itself                      │ │                                                        │ │"
"│                                      ││╰────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────╯ │"
"│                                      ││╭ Disk reads ────────────────────────────────────────────╮ ╭ Planning and execution ────────────────────────────────╮ │"
"│                                      │││ 0 blocks read · cache hit 100%                         │ │ planning 0.785 ms · execution 86.6 ms                  │ │"
"│                                      │││                                                        │ │                                                        │ │"
"│                                      ││╰────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────╯ │"
"│                                      ││ Node                                                                                                   share         │"
"│                                      ││ ▾ Sort                                                                                                 ▏          <1%│"
"│                                      ││ └─▾ HashAggregate hot                                                                                  ████▎      47%│"
"│                                      ││   └─▾ Hash Join hot                                                                                    ██▋        28%│"
"│                                      ││     ├── Seq Scan on zz_orders o hot                                                                    ██▏        23%│"
"│                                      ││     └─▾ Hash                                                                                           ▏          <1%│"
"│                                      ││       └── Seq Scan on zz_customers c                                                                   ▏          <1%│"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms                  │ Enter detail · v views · h fold · y copy · Esc back · : commands · F1 help · Space more EN "
