crates/datarig-tui/tests/snapshots/flows_plan__plan_summary_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1▎SELECT * FROM t;                                  │"
"│    ▸ analytics       ││                                                      │"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Summary ──────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                          │"
"│                      ││ … [Summary] …  execution 86.6 ms · planning 0.785 ms │"
"│                      ││ Node                                   share         │"
"│                      ││ ▾ Sort                                 ▏          <1%│"
"│                      ││ └─▾ HashAggregate hot                  ████▎      47%│"
"│                      ││   └─▾ Hash Join hot                    ██▋        28%│"
"│                      ││     ├── Seq Scan on zz_orders o hot    ██▏        23%│"
"│                      ││     └─▾ Hash                           ▏          <1%│"
"│                      ││       └── Seq Scan on zz_customers c   ▏          <1%│"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms   │ Enter detail · v views EN "
